--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</title>
 </head>
 <body>
-		<p> <a href="public/index.html" click here </a></p>
+		<p> <a href="public/index.html" click</a></p>
 
 </body>
 </html>
